--- a/docs/css/MainUncompress.css
+++ b/docs/css/MainUncompress.css
@@ -940,6 +940,19 @@ label > .label-body {
   border-color: red;
 }
 
+.defaultInput
+    {
+     width: 100px;
+     height:25px;
+     padding: 5px;
+    }
+
+.error
+{
+ border:1px solid red;
+}
+
+
 .greenbord{
   border-style: solid;
   border-width: 5px;
