--- a/docs/css/MainUncompress.css
+++ b/docs/css/MainUncompress.css
@@ -948,6 +948,21 @@ label > .label-body {
 }
 
 
+.materialgurl{/*note material girl og whitetext is single use only, only meant for about us page*/
+  width: 25%;
+  height: auto;
+  padding: 2%;
+  display: block;
+  margin-left: 68%;
+  position: fixed;
+}
+
+.whitetext{
+  color: #FFF;
+  text-align: center;
+  width: 65%;
+  padding-left: 5%;
+}
 
 
 
@@ -1057,3 +1072,36 @@ label > .label-body {
     line-height: 88px;
   }
 }
+
+
+/*-----------------------Nýtt section fyrir annað paralax scrollin-----------------------
+
+.section2 {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  letter-spacing: 4px;
+  overflow: hidden;
+  clip: rect(0, auto, auto, 0);
+}
+
+.section2 .fixed {
+  overflow: hidden;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+}
+.section2 .white {
+  color: #fff;
+}
+.section2:nth-child(1) {
+  background-color: rgb(219, 99, 0);;
+  color: #000; 
+  top: 0;
+  z-index: 1;
+}
+.section2:nth-child(1) .fixed {
+  transform: translate(-50%, -50%);
+}
+*/
